--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -180,10 +180,12 @@ jobs:
       matrix:
         # We're not running CI on macOS for now because it's one less matrix entry to lower the number of runners used,
         # macOS runners are expensive, and we assume that Ubuntu is enough to cover the UNIX case.
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest]
         # Run the tests on the oldest and most recent versions of Python.
-        python: [2.7, 3.8]
-        tests: [ts-unit, python-unit, venv, single-workspace, multi-workspace, debugger, functional]
+        # python: [2.7, 3.8]
+        python: [3.8]
+        # test-suite: [ts-unit, python-unit, venv, single-workspace, multi-workspace, debugger, functional]
+        test-suite: [ts-unit, python-unit, venv, single-workspace]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
