--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -367,13 +367,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: echo a bunch of stuff
-        run: |
-          echo ${{env.GITHUB_RUN_ID}}
-          echo ${GITHUB_RUN_ID}
-          echo $GITHUB_RUN_ID
-          echo GITHUB_RUN_ID
-
       - name: Retrieve cached npm files
         uses: actions/cache@v1
         with:
@@ -398,13 +391,14 @@ jobs:
       - name: Run Smoke tests
         env:
           DISPLAY: 10
+        # Use the GITHUB_RUN_ID environment variable to update the build number
         run: |
           npm run clean
           npx tsc -p ./
           npx gulp clean:cleanExceptTests
           mkdir -p ./tmp
           cp -r ./out/test ./tmp/test
-          npm run updateBuildNumber -- --buildNumber ${{env.GITHUB_RUN_ID}}
+          npm run updateBuildNumber -- --buildNumber ${GITHUB_RUN_ID}
           npm run package
           npx gulp clean:cleanExceptTests
           cp -r ./tmp/test ./out/test
