Take prep work outside of xvfb step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -376,34 +376,36 @@ jobs:
       - name: Install dependencies (npm ci)
         run: npm ci
 
-      - name: Retrieve cached compile output directory
-        # Use an id for this step so that its cache-hit output can be accessed and checked in the next step.
-        id: out-cache
-        uses: actions/cache@v1
-        with:
-          path: ./out
-          key: ${{runner.os}}-${{env.CACHE_OUT_DIRECTORY}}-${{hashFiles('src/**')}}
+      # - name: Retrieve cached compile output directory
+      #   # Use an id for this step so that its cache-hit output can be accessed and checked in the next step.
+      #   id: out-cache
+      #   uses: actions/cache@v1
+      #   with:
+      #     path: ./out
+      #     key: ${{runner.os}}-${{env.CACHE_OUT_DIRECTORY}}-${{hashFiles('src/**')}}
 
-      - name: Compile if not cached
-        run: npx gulp prePublishNonBundle
-        if: steps.out-cache.outputs.cache-hit == false
+      # - name: Compile if not cached
+      #   run: npx gulp prePublishNonBundle
+      #   if: steps.out-cache.outputs.cache-hit == false
 
       # Use the GITHUB_RUN_ID environment variable to update the build number.
       # GITHUB_RUN_ID is a unique number for each run within a repository.
       # This number does not change if you re-run the workflow run.
-      - name: Run Smoke tests
+      - name: Prepare for smoke tests
+        run: |
+          npm run clean
+          npx tsc -p ./
+          npx gulp clean:cleanExceptTests
+          mkdir -p ./tmp
+          cp -r ./out/test ./tmp/test
+          npm run updateBuildNumber -- --buildNumber $GITHUB_RUN_ID
+          npm run package
+          npx gulp clean:cleanExceptTests
+          cp -r ./tmp/test ./out/test
+
+      - name: Run smoke tests
         env:
           DISPLAY: 10
         uses: GabrielBB/xvfb-action@v1.0
         with:
-          run: |
-            npm run clean
-            npx tsc -p ./
-            npx gulp clean:cleanExceptTests
-            mkdir -p ./tmp
-            cp -r ./out/test ./tmp/test
-            npm run updateBuildNumber -- --buildNumber $GITHUB_RUN_ID
-            npm run package
-            npx gulp clean:cleanExceptTests
-            cp -r ./tmp/test ./out/test
-            node ./out/test/smokeTest.js
+          run: node ./out/test/smokeTest.js
