--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -311,12 +311,11 @@ jobs:
         run: npm run test:unittests:cover
         if: matrix.test-suite == 'ts-unit' && startsWith(matrix.python, 3.)
 
-      # Run the Python IPython tests in our codebase.
-      # Produce JUnit-style log files that will be uploaded after all tests are complete.
+      # Run the Python and IPython tests in our codebase.
       - name: Run Python and IPython unit tests
         run: |
-          python pythonFiles/tests/run_all.py --junit-xml=${{env.TEST_RESULTS_DIRECTORY}}/python-tests-junit.xml
-          python -m IPython pythonFiles/tests/run_all.py -- --junit-xml=${{env.TEST_RESULTS_DIRECTORY}}/ipython-tests-junit.xml
+          python pythonFiles/tests/run_all.py
+          python -m IPython pythonFiles/tests/run_all.py
         if: matrix.test-suite == 'python-unit'
 
       # The virtual environment based tests use the `testSingleWorkspace` set of tests
