--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,7 +54,8 @@
     "python.linting.flake8Enabled": true,
     "cucumberautocomplete.skipDocStringsFormat": true,
     "python.linting.flake8Args": [
-        "--max-line-length=120"
+        // Match what black does.
+        "--max-line-length=88"
     ],
     "typescript.preferences.importModuleSpecifier": "relative"
 }
