--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -471,7 +471,8 @@ jobs:
       # See https://developer.github.com/v3/git/tags/#create-a-tag-object
       - name: Create a tag object
         # Curl syntax explanation: https://stackoverflow.com/a/36778045
-        run: curl -s -X POST "https://api.github.com/repos/kimadeline/vscode-python/git/tags"\
+        run: |
+        curl -s -X POST "https://api.github.com/repos/kimadeline/vscode-python/git/tags"\
         -H "Authorization: token ${{secrets.GITHUB_TOKEN}}" \
         -d @- << EOF
         {
@@ -483,7 +484,8 @@ jobs:
         EOF        
       
       - name: Create a tag reference
-        run: curl -s -X POST "https://api.github.com/repos/kimadeline/vscode-python/git/refs"\
+        run: |
+        curl -s -X POST "https://api.github.com/repos/kimadeline/vscode-python/git/refs"\
         -H "Authorization: token ${{secrets.GITHUB_TOKEN}}" \
         -d @- << EOF
         {
