--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -464,31 +464,29 @@ jobs:
         run: |
           curl -s -X DELETE https://api.github.com/repos/kimadeline/vscode-python/git/refs/tags/${{env.LKG_TAG}} \
           -H "Authorization: token ${{secrets.GITHUB_TOKEN}}"
-
       # We need to make 2 calls when creating an annotated tag: first create the tag object, and then the tag reference.
       # If we wanted to create a lightweight tag we would only need the tag reference.
       # See https://developer.github.com/v3/git/tags/#create-a-tag-object
-      - name: Create a tag object
-        # Curl syntax explanation: https://stackoverflow.com/a/36778045
-        run: |
-          curl -s -X POST "https://api.github.com/repos/kimadeline/vscode-python/git/tags" \
-          -H "Authorization: token ${{secrets.GITHUB_TOKEN}}" \
-          -d @- << EOF
-          {
-            "tag": "${{env.LKG_TAG}}",
-            "message": "Last known good build of vscode-python via the GitHub Action CI workflow",
-            "object": "${{github.sha}}",
-            "type": "commit"
-          }
-          EOF
-
-      - name: Create a tag reference
-        run: |
-          curl -s -X POST "https://api.github.com/repos/kimadeline/vscode-python/git/refs" \
-          -H "Authorization: token ${{secrets.GITHUB_TOKEN}}"  \
-          -d @- << EOF
-          {
-            "ref": "refs/tags/${{env.LKG_TAG}}",
-            "sha": "${{github.sha}}"
-          }
-          EOF
+      # - name: Create a tag object
+      #   # Curl syntax explanation: https://stackoverflow.com/a/36778045
+      #   run: |
+      #     curl -s -X POST "https://api.github.com/repos/kimadeline/vscode-python/git/tags" \
+      #     -H "Authorization: token ${{secrets.GITHUB_TOKEN}}" \
+      #     -d @- << EOF
+      #     {
+      #       "tag": "${{env.LKG_TAG}}",
+      #       "message": "Last known good build of vscode-python via the GitHub Action CI workflow",
+      #       "object": "${{github.sha}}",
+      #       "type": "commit"
+      #     }
+      #     EOF
+      # - name: Create a tag reference
+      #   run: |
+      #     curl -s -X POST "https://api.github.com/repos/kimadeline/vscode-python/git/refs" \
+      #     -H "Authorization: token ${{secrets.GITHUB_TOKEN}}"  \
+      #     -d @- << EOF
+      #     {
+      #       "ref": "refs/tags/${{env.LKG_TAG}}",
+      #       "sha": "${{github.sha}}"
+      #     }
+      #     EOF
