--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       # Run the CI workflow only on master for microsoft/vscode-python for now.
-      - gh-action-*
+      - master
 
 env:
   PYTHON_VERSION: 3.8
@@ -188,10 +188,10 @@ jobs:
       matrix:
         # We're not running CI on macOS for now because it's one less matrix entry to lower the number of runners used,
         # macOS runners are expensive, and we assume that Ubuntu is enough to cover the UNIX case.
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, windows-latest]
         # Run the tests on the oldest and most recent versions of Python.
-        python: [3.8]
-        test-suite: [ts-unit]
+        python: [2.7, 3.8]
+        test-suite: [ts-unit, python-unit, venv, single-workspace, multi-workspace, debugger, functional]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -372,7 +372,7 @@ jobs:
       matrix:
         # We're not running CI on macOS for now because it's one less matrix entry to lower the number of runners used,
         # macOS runners are expensive, and we assume that Ubuntu is enough to cover the UNIX case.
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, windows-latest]
         python: [3.8]
     steps:
       - name: Checkout
@@ -462,8 +462,8 @@ jobs:
           curl -s -X DELETE https://api.github.com/repos/microsoft/vscode-python/git/refs/tags/${{env.LKG_TAG}} \
           -H "Authorization: token ${{secrets.GITHUB_TOKEN}}"
 
-      # We need to make 2 calls when creating an annotated tag: first create the tag object, and then the tag reference.
-      # If we wanted to create a lightweight tag we would only need the tag reference.
+      # We need 2 calls when creating an annotated tag: first create the tag object, then the tag reference.
+      # If we only wanted a lightweight tag we would only need to create a tag reference.
       # See https://developer.github.com/v3/git/tags/#create-a-tag-object
       - name: Create a tag object
         # Curl syntax explanation: https://stackoverflow.com/a/36778045
