--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,8 +4,7 @@ on:
   push:
     branches:
       # Run the CI workflow only on master for microsoft/vscode-python for now.
-      - gh-action-*
-      # - master
+      - master
 
 env:
   PYTHON_VERSION: 3.8
@@ -452,11 +451,11 @@ jobs:
           file: ./coverage/cobertura-coverage.xml
 
   lkg-tag:
-    #  LKG = last known good
+    # LKG = last known good
     name: Tag successful build as LKG
     runs-on: ubuntu-latest
-    # needs: [tests, smoke-tests]
-    # if: github.repository == 'microsoft/vscode-python'
+    needs: [tests, smoke-tests]
+    if: github.repository == 'microsoft/vscode-python'
     steps:
       - name: Delete existing tag
         run: |
