--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -456,10 +456,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: [tests, smoke-tests]
     if: github.repository == 'microsoft/vscode-python'
+    env:
+      API_URL: https://api.github.com/repos/microsoft/vscode-python/git
     steps:
       - name: Delete existing tag
         run: |
-          curl -s -X DELETE https://api.github.com/repos/microsoft/vscode-python/git/refs/tags/${{env.LKG_TAG}} \
+          curl -s -X DELETE ${{env.API_URL}}/refs/tags/${{env.LKG_TAG}} \
           -H "Authorization: token ${{secrets.GITHUB_TOKEN}}"
 
       # We need 2 calls when creating an annotated tag: first create the tag object, then the tag reference.
@@ -472,7 +474,7 @@ jobs:
           date_now=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
 
           # Create the tag object and store the response.
-          response_payload=$(curl -s -X POST "https://api.github.com/repos/microsoft/vscode-python/git/tags" \
+          response_payload=$(curl -s -X POST ${{env.API_URL}}/tags \
           -H "Authorization: token ${{secrets.GITHUB_TOKEN}}" \
           -d @- << EOF
           {
@@ -494,7 +496,7 @@ jobs:
           tag_sha=$(echo $response_payload | jq ".sha") 
 
           # Finally create the tag ref using the tag SHA.
-          curl -s -X POST "https://api.github.com/repos/microsoft/vscode-python/git/refs" \
+          curl -s -X POST ${{env.API_URL}}/refs \
           -H "Authorization: token ${{secrets.GITHUB_TOKEN}}" \
           -d @- << EOF
           {
