--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,9 @@ jobs:
     runs-on: ubuntu-latest
     # if: github.repository == 'microsoft/vscode-python'
     steps:
+      - name: Node version?
+        run: node --version
+
       - name: Checkout
         uses: actions/checkout@v2
 
@@ -182,7 +185,7 @@ jobs:
     name: Tests
     # The value of runs-on is the OS of the current job (specified in the strategy matrix below) instead of being hardcoded.
     runs-on: ${{ matrix.os }}
-    # if: github.repository == 'microsoft/vscode-python'
+    if: github.repository == 'microsoft/vscode-python'
     needs: [python-deps, js-ts-deps]
     strategy:
       matrix:
