Add comment, test node 16.0

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -196,7 +196,10 @@ jobs:
         # test-suite: [ts-unit, python-unit, venv, single-workspace, multi-workspace, debugger, functional]
         test-suite: [debugger]
     env:
-      NODE_VERSION: 12.14.1
+      # Something in Node 12.XX.XX breaks the TS debug adapter, and ubuntu-latest bundles Node 12.16.1.
+      # We can remove this when we switch over to the pytchon-based DA.
+      # See https://github.com/microsoft/ptvsd/issues/2068
+      NODE_VERSION: 12.16.0
     steps:
       - name: Checkout
         uses: actions/checkout@v2
