--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,8 @@ tmp/**
 .python-version
 .vs/
 test-results.xml
+xunit-test-results.xml
+build/ci/performance/performance-results.json
 !build/
 debug*.log
 ptvsd*.log
