added a script to create a new benchmark

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ tmp/**
 test-results.xml
 xunit-test-results.xml
 build/ci/performance/performance-results.json
+build/ci/performance/DS_test_benchmark.json
 !build/
 debug*.log
 ptvsd*.log
