--- a/package.json
+++ b/package.json
@@ -2868,11 +2868,14 @@
         "@jupyterlab/services": "^4.2.0",
         "@koa/cors": "^3.0.0",
         "@loadable/component": "^5.12.0",
+        "@types/jsonfile": "^5.0.0",
+        "@types/mkdirp": "^1.0.0",
         "ansi-regex": "^4.1.0",
         "arch": "^2.1.0",
         "azure-storage": "^2.10.3",
         "detect-indent": "^6.0.0",
         "diff-match-patch": "^1.0.0",
+        "execa": "^4.0.0",
         "fast-deep-equal": "^2.0.1",
         "fs-extra": "^4.0.3",
         "fuzzy": "^0.1.3",
@@ -2882,6 +2885,9 @@
         "iconv-lite": "^0.4.21",
         "inversify": "^4.11.1",
         "jsonc-parser": "^2.0.3",
+        "jsonfile": "^6.0.1",
+        "jupyter-paths": "^2.0.0",
+        "kernelspecs": "^2.0.0",
         "koa": "^2.11.0",
         "koa-compress": "^3.0.0",
         "koa-logger": "^3.2.1",
@@ -2889,6 +2895,7 @@
         "lodash": "^4.17.15",
         "md5": "^2.2.1",
         "minimatch": "^3.0.4",
+        "mkdirp": "^1.0.3",
         "named-js-regexp": "^1.3.3",
         "node-fetch": "^1.0.0",
         "node-stream-zip": "^1.6.0",
