--- a/package.json
+++ b/package.json
@@ -2923,7 +2923,8 @@
         "winreg": "^1.2.4",
         "winston": "^3.2.1",
         "ws": "^6.0.0",
-        "xml2js": "^0.4.19"
+        "xml2js": "^0.4.19",
+        "zeromq": "^6.0.0-beta.6"
     },
     "devDependencies": {
         "@babel/cli": "^7.4.4",
